[package]
name = "vbscript"
version = "0.2.1"
edition = "2024"
description = "Rust VBScript lexer and parser "
repository = "https://github.com/francisdb/vbscript.rs"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/vbscript"

[features]
interpreter = []

[dependencies]
logos = "0.15.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
indoc = "2.0.5"
glob = "0.3.1"
criterion = "0.5.1"

[[bench]]
name = "main"
harness = false
